force-app/main/default/objects/APIErrorCode__mdt/APIErrorCode__mdt.object-meta.xml
<CustomObject>
    <description>Used by all REST APIs</description>
    <label>API Error Code</label>
    <pluralLabel>APIErrorCode</pluralLabel>
</CustomObject>