force-app/main/default/objects/APIErrorCode__mdt/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <label>Error Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>