force-app/main/default/objects/APIErrorCode__mdt/fields/HttpStatus__c.field-meta.xml
<CustomField>
    <fullName>HttpStatus__c</fullName>
    <label>HTTP Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>