force-app/main/default/objects/APIErrorCode__mdt/fields/Retryable__c.field-meta.xml
<CustomField>
    <fullName>Retryable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retryable</label>
    <type>Checkbox</type>
</CustomField>